[package]
name = "snazlock"
version = "0.1.0"
authors = ["Miles Steele <miles@milessteele.com>"]

[dependencies]
num = "0.1.36"
rand = "0.3.14"
pam-auth = "0.4.0"
rpassword = "0.3.0"
users = "0.5.2"
glutin = "0.6.2"
piston = "0.26.0"
piston2d-graphics = "0.18.0"
pistoncore-glutin_window = "0.31.0"
piston2d-opengl_graphics = "0.35.0"

[replace]
"glutin:0.6.2" = { path = "local/glutin" }
